--- a/views/createanketa.jade
+++ b/views/createanketa.jade
@@ -36,6 +36,18 @@ html(lang='cz', dir='ltr')
                 span Náhodné pořadí otázek
               div.checkbox-container
                 div.check-container
+                  label.checkbox-label(for='note').advanced-settings-checkbox
+                    input(type='checkbox', name='note', id='note').input-checkbox
+                    span.checkmark
+                span Možnost přidat komentář
+              div.checkbox-container
+                div.check-container
+                  label.checkbox-label(for='user_data').advanced-settings-checkbox
+                    input(type='checkbox', name='user_data', id='user_data').input-checkbox
+                    span.checkmark
+                span Přidat identifikaci
+              div.checkbox-container
+                div.check-container
                   label.checkbox-label(for='weights').advanced-settings-checkbox
                     input(type='checkbox', name='weights', id='weights', onchange='weightChange();').input-checkbox
                     span.checkmark
@@ -76,13 +88,14 @@ html(lang='cz', dir='ltr')
                         option 2
                     div.weight-container(style='display:none;')
                       label Váha otázky
-                      div.slider-axis
-                        span 0
-                        span 0.25
-                        span 0.5
-                        span 0.75
-                        span 1
-                      input(type='range', min='0', max='1', value='1', step='0.25', class='slider', name='weight'+x)
+                      //- div.slider-axis
+                      //-   span 0
+                      //-   span 0.25
+                      //-   span 0.5
+                      //-   span 0.75
+                      //-   span 1
+                      //- input(type='range', min='0', max='1', value='1', step='0.25', class='slider', name='weight'+x)
+                      input(type='number', min='0', max='2', value='1', step='0.01', name='weight'+x)
                     hr
                 else
                   div(id='question' + x, style='display:none;')
@@ -102,13 +115,14 @@ html(lang='cz', dir='ltr')
                         option 2
                     div.weight-container(style='display:none;')
                       label Váha otázky
-                      div.slider-axis
-                        span 0
-                        span 0.25
-                        span 0.5
-                        span 0.75
-                        span 1
-                      input(type='range', min='0', max='1', value='1', step='0.25', class='slider', name='weight'+x)
+                      //- div.slider-axis
+                      //-   span 0
+                      //-   span 0.25
+                      //-   span 0.5
+                      //-   span 0.75
+                      //-   span 1
+                      //- input(type='range', min='0', max='1', value='1', step='0.25', class='slider', name='weight'+x)
+                      input(type='number', min='0', max='2', value='1', step='0.01', name='weight'+x)
                     hr
                   
                 
