--- a/views/index.jade
+++ b/views/index.jade
@@ -11,8 +11,10 @@ html(lang='cz', dir='ltr')
     //- link(rel='stylesheet', href='css/results.css')
     link(rel='manifest', href='manifest.json')
     link(rel='stylesheet', href='css/main.css')
-    link(rel='stylesheet', href='../css/odometer-theme-default.css')
+    //- link(rel='stylesheet', href='../css/odometer-theme-default.css')
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.css')
     link(rel='stylesheet', href='https://use.fontawesome.com/releases/v5.3.1/css/all.css', integrity='sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU', crossorigin='anonymous')
+    script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.js')
     title
   body
     div.content-container
