--- a/views/createanketa.jade
+++ b/views/createanketa.jade
@@ -66,6 +66,12 @@ html(lang='cz', dir='ltr')
                   option(value='3') 3
                   option(value='4') 4
                   option(value='5') 5
+              div.checkbox-container
+                div.check-container
+                  label.checkbox-label(for='lang_en').advanced-settings-checkbox
+                    input(type='checkbox', name='lang_en', id='lang_en', onchange='langEnChange();').input-checkbox
+                    span.checkmark
+                span Přidat otázky v angličtině
             hr
             div.questionInput
               - for(var x =0; x< 50; x++)
@@ -74,7 +80,12 @@ html(lang='cz', dir='ltr')
                     label Otázka
                     span.delete-icon-container
                       i.fas.fa-times(onclick='deleteQuestion('+x+');').delete-icon
-                    input.input-text(type='text', name='question' + x)
+                    div.lang-icon-container.lang-cz-input
+                      img(src='img/cz_icon.png').lang-icon
+                      input.input-text(type='text', name='question' + x)
+                    div.lang-icon-container.lang-en-input(style='display:none')
+                      img(src='img/en_icon.png').lang-icon
+                      input.input-text(type='text', name='question' + x)
                     
                     label Obrázek otázky
                     div.img-container
@@ -102,7 +113,12 @@ html(lang='cz', dir='ltr')
                     label Otázka
                     span.delete-icon-container
                       i.fas.fa-times(onclick='deleteQuestion('+x+');').delete-icon
-                    input.input-text(type='text', name='question' + x)
+                    div.lang-icon-container.lang-cz-input
+                      img(src='img/cz_icon.png').lang-icon
+                      input.input-text(type='text', name='question' + x)
+                    div.lang-icon-container.lang-en-input(style='display:none')
+                      img(src='img/en_icon.png').lang-icon
+                      input.input-text(type='text', name='question' + x)
                     
                     label Obrázek otázky
                     div.img-container
