--- a/public/css/main.css
+++ b/public/css/main.css
@@ -516,26 +516,34 @@ background-color: rgb(222,29,14);
   display: flex;
   flex-direction: row;
   overflow-x: auto;
+  overflow-y: hidden;
 }
 .chart{
   height: 100%;
-  flex: 0 0 48.5%;
+  flex: 0 0 50%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
 }
-.chart:first-child{
+.chart:nth-child(2n+0){
+  background: #202225;
+}
+/* .chart:first-child{
   margin-left: 1rem
 }
 .chart:last-child{
   padding-right: 1rem;
-}
+} */
 .chart-span{
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-family: skodaFontRegular;
   text-align: center;
-  padding: 1.2rem;
+  height: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 1rem;
 }
 .data-container-excel-container{
   display: flex;
@@ -1116,6 +1124,7 @@ select{
 }
 #q{
   margin: 0 3rem;
+  text-align: center;
 }
 .play-buttons-container-mps{
   flex: 1 0 40%;
@@ -1177,4 +1186,24 @@ select{
 }
 .lang-switch-icon-selected{
   opacity: 1;
+}
+.chart-graph-container{
+  padding-top: 90%;
+  width: 90%;
+  position: relative;
+}
+/* [id^='chart']{
+  position: absolute;
+} */
+.chart-graph{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
 }
