--- a/views/playA.jade
+++ b/views/playA.jade
@@ -6,10 +6,16 @@ html(lang='cz', dir='ltr')
     //- link(rel='stylesheet', href='../../css/playA.css')
     link(rel='stylesheet', href='../../../css/main.css')
     //- link(rel='stylesheet', href='../css/bootstrap.css')
-    link(rel='stylesheet', href='https://use.fontawesome.com/releases/v5.3.1/css/all.css', integrity='sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU', crossorigin='anonymous')
-    
+    //- link(rel='stylesheet', href='https://use.fontawesome.com/releases/v5.3.1/css/all.css', integrity='sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU', crossorigin='anonymous')
+    link(rel='stylesheet', href='../../../css/fa.css')
     title
   body
+    script(type='text/javascript').
+      var local_data =!{JSON.stringify(anketa)}
+      var cluster = !{JSON.stringify(cluster)}
+      var lang = !{JSON.stringify(lang)}
+    script(type='text/javascript', src='../../../js/jquery-3.3.1.min.js')
+    script(type='text/javascript' src='../../../js/playA.js')  
     div.content-container
       div.main-container
         //- div.play-container
@@ -89,9 +95,9 @@ html(lang='cz', dir='ltr')
           img(src='../../../img/cz_icon.png', onclick='switchLang("cz")').lang-switch-icon#lang-cz
           img(src='../../../img/en_icon.png', onclick='switchLang("en")').lang-switch-icon#lang-en
         
-      script(type='text/javascript').
-        var local_data =!{JSON.stringify(anketa)}
-        var cluster = !{JSON.stringify(cluster)}
-        var lang = !{JSON.stringify(lang)}
-    script(type='text/javascript', src='../../../js/jquery-3.3.1.min.js')
-    script(type='text/javascript' src='../../../js/playA.js')  
+      //- script(type='text/javascript').
+      //-   var local_data =!{JSON.stringify(anketa)}
+      //-   var cluster = !{JSON.stringify(cluster)}
+      //-   var lang = !{JSON.stringify(lang)}
+    //- script(type='text/javascript', src='../../../js/jquery-3.3.1.min.js')
+    //- script(type='text/javascript' src='../../../js/playA.js')  
