--- a/views/index.jade
+++ b/views/index.jade
@@ -12,10 +12,10 @@ html(lang='cz', dir='ltr')
     link(rel='manifest', href='manifest.json')
     link(rel='stylesheet', href='css/main.css')
     //- link(rel='stylesheet', href='../css/odometer-theme-default.css')
-    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.css')
+    //- link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.css')
     //- link(rel='stylesheet', href='https://use.fontawesome.com/releases/v5.3.1/css/all.css', integrity='sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU', crossorigin='anonymous')
     link(rel='stylesheet', href='css/fa.css')
-    script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.js')
+    
     title
   body
     div.content-container
@@ -57,6 +57,7 @@ html(lang='cz', dir='ltr')
         //- i.fas.fa-cog.content-loading-icon
           
       div.popup-window(style='display:none;').password
+          h3(style='margin:0') Zadejte pin
           input.password-input(type='password')
           div.popup-window-btn-container
             button.btn.btn-confirm(onclick='confirmPassword();') OK
@@ -73,4 +74,5 @@ html(lang='cz', dir='ltr')
       script(src='js/home.js', type='text/javascript')
       script(src='js/createanketa.js', type='text/javascript')
       script(src='js/createquiz.js', type='text/javascript')
-      script(type='text/javascript', src='../js/odometer.js')
+      //- script(type='text/javascript', src='../js/odometer.js')
+      script(type='text/javascript', src='js/chart.js')
