--- a/views/createanketa.jade
+++ b/views/createanketa.jade
@@ -61,7 +61,7 @@ html(lang='cz', dir='ltr')
               div#sector-count(style='display:none;')
                 span Počet sektorů
                 br
-                select(name='sector_count', onchange='sectorCountChange();', id='sector-count-select')
+                select(name='sector_count', onchange='sectorCountChange(this.value);', id='sector-count-select')
                   option(value='2') 2
                   option(value='3') 3
                   option(value='4') 4
@@ -143,13 +143,15 @@ html(lang='cz', dir='ltr')
                   
                 
                 
-            button.add-btn.btn.btn-block(onclick='addQuestion();', type='button') Přidat otázku
+            button.add-btn.btn.btn-half(onclick='addQuestion();', type='button') Přidat otázku
+            button.add-btn.btn.btn-half.add-btn-mps(onclick='addMpsQuestion();', type='button') Přidat MPS otázku
               //- i.fas.fa-plus
             br
             button.submitBtn.btn.btn-block.btn-confirm(type="button", onclick='finish();') Vytvořit 
             script.
               count = 1;
-        
+              editData =!{JSON.stringify(anketa[0])}
+              
       nav.navbar
         a.navbar-item(href='/')
           i.fas.fa-home.navbar-icon
@@ -157,3 +159,4 @@ html(lang='cz', dir='ltr')
           i.fas.fa-cogs.navbar-icon
       script(type='text/javascript', src='js/jquery-3.3.1.min.js')
       script(type='text/javascript', src='js/createanketa.js')
+      
