--- a/views/playA.jade
+++ b/views/playA.jade
@@ -42,7 +42,7 @@ html(lang='cz', dir='ltr')
               button.btn-answer#answer4.btn(type="button", value=4, onclick='select(4);') Spíše ne
               button.btn-answer#answer5.btn(type="button", value=5, onclick='select(5);') Určitě ne
               div.note
-                textarea.play-textarea(placeholder="Komentář ...")#note
+                textarea.play-textarea(placeholder="Komentář ...", onchange='noteChanged()')#note
                 i(onclick='record();').fas.fa-microphone.note-button(style="display:none;")
                 
             div.play-buttons-container-mps(style="display:none;")
