RELESE 2 | ES6 code

--- a/views/results.jade
+++ b/views/results.jade
@@ -50,7 +50,7 @@ html(lang='cz', dir='ltr')
                 span.data-list-item-value#questions_count 0
                 script(type='text/javascript').
                   var local_data =!{JSON.stringify(result)}
-                  var name =!{JSON.stringify(name)}
+                  var name =!{JSON.stringify(target)}
                 
             div.data-container-excel-container
               //- button.data-container-excel(onclick='download();').btn.btn-confirm
