--- a/public/css/main.css
+++ b/public/css/main.css
@@ -774,7 +774,7 @@ select{
   display: block;
   /* color: #495057;
   /* line-height: 1.5rem; */
-  width: calc(100% - 2.8rem);
+  width: calc(100% - 2.8rem) !important;
   /* margin: 0 1rem; */
   /*
   font-family: skodaFontLight;
@@ -786,7 +786,7 @@ select{
 
 .desc-select {
   height: 1.8rem;
-  width : calc(100% - 1.8rem);
+  width : calc(100% - 1.8rem) !important;
 }
 
 .btn-answer {
@@ -1299,4 +1299,26 @@ input[type="number"]{
 }
 select[name='sector_count']{
   width: 35%;
+}
+.content-loading{
+  display: flex;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  justify-content: center;
+  align-items: center;
+}
+.content-loading i{
+  font-size: 3rem;
+  animation: spin 1s infinite;
+  color: #4BA82E;
+}
+@keyframes spin {
+  from{
+    transform: rotate(0deg);
+  }
+  to{
+    transform: rotate(360deg);
+  }
 }
