--- a/views/playA.jade
+++ b/views/playA.jade
@@ -122,7 +122,7 @@ html(lang='cz', dir='ltr')
         div.lang-mobile-foreground
           img(src='../../../img/cz_icon.png', onclick='switchLang("cz")').lang-mobile-icon
           img(src='../../../img/en_icon.png', onclick='switchLang("en")').lang-mobile-icon
-          img(src='../../../img/de_icon.png').lang-mobile-icon
+          img(src='../../../img/de_icon.png', onclick='switchLang("de")').lang-mobile-icon
       //- script(type='text/javascript').
       //-   var local_data =!{JSON.stringify(anketa)}
       //-   var cluster = !{JSON.stringify(cluster)}
